# nixfs

./: LICENSE  README.md  debugrun.sh  flake.nix
.github/workflows/: flake_check.yml
nixfs/: CMakeLists.txt
nixfs/include/: base64.h  nixfs.h  urldec.h  version.h.in
nixfs/src/: base64.c  main.c  nixfs.c  urldec.c
src/: CMakeLists.txt
src/include/: debug.h  nixfs.h
src/src/: main.c  nixfs.c
utils/: update-release.sh
